fix: fix radio buttons alignemnt in row and column mode

--- a/src/layout/RadioButtons/ControlledRadioGroup.module.css
+++ b/src/layout/RadioButtons/ControlledRadioGroup.module.css
@@ -4,6 +4,14 @@
   gap: var(--ds-size-6);
 }
 
+.inlineRadioGroupInTable {
+  margin-top: var(--ds-size-3);
+}
+
+.columnRadioGroupInTable {
+  margin-top: calc(var(--ds-size-1) * -2);
+}
+
 .legend {
   display: inline-flex;
 }
